force-app/main/default/objects/Product_Family__c/Product_Family__c.object-meta.xml
<CustomObject>
    <label>Product Family</label>
    <pluralLabel>Product Families</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Family Name</label>
    </nameField>
    <sharingModel>Read</sharingModel>
    <description>Groups sellable Product2 variants under a common family (brand, image, long description, product manager). Salesforce has no native variant concept; Product2 stays the sellable entity. OWD Public Read Only. See decisions-log Product domain / Variantes.</description>
</CustomObject>