force-app/main/default/objects/Product_Family__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Text</type>
    <length>120</length>
    <description>Brand of the product family.</description>
</CustomField>