force-app/main/default/objects/Product_Family__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <label>Image URL</label>
    <type>Url</type>
    <description>URL of the family's representative image.</description>
</CustomField>