force-app/main/default/objects/Product_Family__c/fields/Long_Description__c.field-meta.xml
<CustomField>
    <fullName>Long_Description__c</fullName>
    <label>Long Description</label>
    <type>LongTextArea</type>
    <length>4000</length>
    <description>Long marketing description of the product family.</description>
</CustomField>