force-app/main/default/objects/Product_Family__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Lookup</type>
    <referenceTo>Product_Category__c</referenceTo>
    <relationshipLabel>Product Families</relationshipLabel>
    <relationshipName>Product_Families</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional category for this family. Lookup (not Master-Detail) because a family can exist without an assigned category. See decisions-log Product domain / Categories.</description>
</CustomField>