force-app/main/default/objects/Product_Family__c/fields/Product_Manager__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager__c</fullName>
    <label>Product Manager</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Managed Product Families</relationshipLabel>
    <relationshipName>Managed_Product_Families</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Internal user responsible for this product family.</description>
</CustomField>